Fix footer display in IE8
At the moment footer looks broken in IE8. It doesn't like the padding
being set on top and bottom of the container, resulting in an increased
padding at the bottom and a "hanging" top border.

This work moves the responsive padding to the 'meta' element for IE8,
but keeps it on the wrapper for IE9 and modern browsers.

--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -22,9 +22,10 @@
 
   .govuk-footer {
     @include govuk-font($size: 16);
-    @include govuk-responsive-padding(7, "top");
-    @include govuk-responsive-padding(5, "bottom");
-
+    @include govuk-not-ie8 {
+      @include govuk-responsive-padding(7, "top");
+      @include govuk-responsive-padding(5, "bottom");
+    }
     border-top: 1px solid $govuk-footer-border-top;
     color: $govuk-footer-text;
     background: $govuk-footer-background;
@@ -70,6 +71,10 @@
     display: flex; // Support: Flexbox
     margin-right: -$govuk-gutter-half;
     margin-left: -$govuk-gutter-half;
+    @include govuk-if-ie8 {
+      @include govuk-responsive-padding(7, "top");
+      @include govuk-responsive-padding(5, "bottom");
+    }
     flex-wrap: wrap; // Support: Flexbox
     align-items: flex-end; // Support: Flexbox
     justify-content: center; // Support: Flexbox
